# shared-spaces-app-spike

./: Cargo.toml  index.html  readme.md
.github/workflows/: rust.yml
src/: lib.rs
src/adapters/: localforage_adapter.rs  mod.rs  webrtc_adapter.rs  websocket_adapter.rs
src/controllers/: device_controller.rs  file_controller.rs  file_part_controller.rs  mod.rs  webrtc_connection_controller.rs
src/factories/: app_response_factory.rs  mod.rs  template_factory.rs
src/listeners/: mod.rs  websocket_listener.rs
src/models/: app_event.rs  device.rs  device_status.rs  file.rs  file_content.rs  file_part.rs  mod.rs  request.rs  response.rs
src/pages/: layout.hbs
src/pages/device/: create.hbs
src/pages/file/: details.hbs  list.hbs
src/repositories/: device_repository.rs  device_status_repository.rs  file_part_repository.rs  file_repository.rs  mod.rs
src/services/: device_status_service.rs  file_location_service.rs  file_service.rs  mod.rs  request_service.rs
