[package]
name = "shared-space"
version = "0.1.0"
authors = ["Logan Keenan <d.logankeenan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.63"
handlebars = "3.1.0"
serde_json = "1.0.53"