[package]
name = "shared-spaces-app"
version = "0.1.0"
authors = ["Logan Keenan <d.logankeenan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.13"
js-sys = "0.3.40"
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
handlebars = "3.1.0"
serde_json = "1.0.53"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
percent-encoding = "2.1.0"
regex = "1.3.9"
md5 = "0.7.0"

[build-dependencies]
wasm-pack = "0.9.1"